# hush-backend

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .env.example  Cargo.toml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
api/scripts/: provision-device.ts  upload-firmware.ts
api/src/: index.ts  main.rs  models.rs  schemas.ts  server.ts  version.ts
api/src/auth/: bootstrap.ts  hmac.ts  jwt.ts  mod.rs  password.ts  refresh.ts
api/src/config/: status.ts
api/src/db/: client.ts  mod.rs  types.ts
api/src/routes/: audio.ts  config.ts  device.ts  devices.ts  firmware.ts  health.ts  mod.rs  ready.ts  users.ts
api/src/storage/: mod.rs  s3.ts
api/src/transcode/: ffmpeg.ts  mod.rs  queue.ts
api/src/util/: cursor.ts
api/test/: audio.e2e.test.ts  config-status.test.ts  config.e2e.test.ts  cursor.test.ts  device-cards-download.e2e.test.ts  device-register.e2e.test.ts  devices.e2e.test.ts  ffmpeg.test.ts  health.test.ts  hmac.test.ts  password.test.ts  queue.test.ts  ready.test.ts  refresh.test.ts  schemas.test.ts  users.e2e.test.ts
dashboard/: .env.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/(app)/: layout.tsx
dashboard/app/(app)/audio/: page.tsx
dashboard/app/(app)/config/: page.tsx
dashboard/app/(app)/devices/: page.tsx
dashboard/app/(app)/devices/[id]/: page.tsx
dashboard/app/(app)/users/: page.tsx
dashboard/app/(app)/users/new/: page.tsx
dashboard/app/(public)/: layout.tsx
dashboard/app/(public)/login/: page.tsx
dashboard/app/(public)/register/: page.tsx
dashboard/components/: providers.tsx
dashboard/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx
dashboard/lib/api/: client.ts  endpoints.ts  schema.ts  types.ts
dashboard/lib/auth/: store.ts
migrations/: 0001_initial_schema.sql  0002_audios.sql  0003_device_sync.sql  0004_firmware_releases.sql  0005_user_roles.sql  README.md
