[workspace]
resolver = "2"
members = ["api"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Hush contributors"]
repository = "https://github.com/open-hush/hush-backend"

# Shared dependency versions. Per-crate Cargo.toml files pull these via
# `<crate>.workspace = true`.
[workspace.dependencies]
axum = { version = "0.8", features = ["macros", "multipart", "http2"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }
hyper = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
aws-config = "1"
aws-sdk-s3 = "1"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.dev]
opt-level = 1   # acceptable build time; way better runtime than opt-level 0 for sqlx
